--- a/step-02/src/index.html
+++ b/step-02/src/index.html
@@ -23,7 +23,7 @@
     <header>
         <nav class="navbar navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand">Slideshow App</span>
+                <a class="navbar-brand">Slideshow App</a>
 
             </div>
         </nav>
@@ -37,7 +37,7 @@
                         HOME PAGE
                     </h1>
                     <h2 class="fs-5">
-                        Here you can look at your pictures throw slide show or list
+                        You can view your images as a slideshow or as a list
                     </h2>
                     <hr />
                 </div>
