--- a/step-03/src/index.html
+++ b/step-03/src/index.html
@@ -6,24 +6,25 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
     <link rel="shortcut icon" href="images/pic-icon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css">
 
     <title>Slideshow App</title>
-
-    <style>
-        .center {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-    </style>
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-dark bg-dark">
+        <nav class="navbar navbar-dark bg-dark d-flex align-items-baseline">
             <span class="navbar-brand ms-1">Slideshow App</span>
-
+            <ul class="navbar-nav me-auto d-flex flex-row">
+                <li class="nav-item active mx-3">
+                    <a href="#" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item mx-3">
+                    <a href="about.html" class="nav-link">About</a>
+                </li>
+            </ul>
         </nav>
     </header>
 
@@ -35,7 +36,7 @@
                         HOME PAGE
                     </h1>
                     <h2 class="fs-5">
-                        You can view your images as a slideshow or as a list
+                        Here you can look at your pictures throw slide show or list
                     </h2>
                     <hr />
                 </div>
