--- a/step-02/src/index.html
+++ b/step-02/src/index.html
@@ -27,19 +27,15 @@
         </nav>
     </header>
 
-    <main>
-        <div>
-            <div class="center mt-4">
-                <div class="col-12 col-md-10 col-xl-8">
-                    <h1 class="text-center display-4">
-                        HOME PAGE
-                    </h1>
-                    <h2 class="fs-5">
-                        You can view your images as a slideshow or as a list
-                    </h2>
-                    <hr />
-                </div>
-            </div>
+    <main class="center mt-4">
+        <div class="col-12 col-md-10 col-xl-8">
+            <h1 class="text-center display-4">
+                HOME PAGE
+            </h1>
+            <h2 class="fs-5">
+                You can view your images as a slideshow or as a list
+            </h2>
+            <hr />
         </div>
     </main>
 
