--- a/step-03/src/about.html
+++ b/step-03/src/about.html
@@ -31,19 +31,15 @@
         </nav>
     </header>
 
-    <main>
-        <div>
-            <div class="center mt-4">
-                <div class="col-12 col-md-10 col-xl-8">
-                    <h1 class="text-center display-4">
-                        ABOUT PAGE
-                    </h1>
-                    <h2 class="fs-5">
-                        This page provides information about the slideshow app.
-                    </h2>
-                    <hr />
-                </div>
-            </div>
+    <main class="center mt-4">
+        <div class="col-12 col-md-10 col-xl-8">
+            <h1 class="text-center display-4">
+                ABOUT PAGE
+            </h1>
+            <h2 class="fs-5">
+                This page provides information about the slideshow app.
+            </h2>
+            <hr />
         </div>
     </main>
 
