--- a/step-04/src/index.html
+++ b/step-04/src/index.html
@@ -19,17 +19,18 @@
             <span class="navbar-brand ms-1">Slideshow App</span>
             <ul class="navbar-nav me-auto d-flex flex-row">
                 <li class="nav-item active mx-3">
-                    <a href="#" class="nav-link">Home</a>
+                    <a id="home-page-link" href="#" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item mx-3">
-                    <a href="about.html" class="nav-link">About</a>
+                    <a id="about-page-link" href="#" class="nav-link">About</a>
                 </li>
             </ul>
         </nav>
     </header>
 
     <main class="center mt-4">
-        <div class="col-12 col-md-10 col-xl-8">
+
+        <div id="home-page" class="col-12 col-md-10 col-xl-8 d-none">
             <h1 class="text-center display-4">
                 HOME PAGE
             </h1>
@@ -38,6 +39,17 @@
             </h2>
             <hr />
         </div>
+
+        <div id="about-page" class="col-12 col-md-10 col-xl-8 d-none">
+            <h1 class="text-center display-4">
+                ABOUT PAGE
+            </h1>
+            <h2 class="fs-5">
+                This page provides information about the slideshow app.
+            </h2>
+            <hr />
+        </div>
+
     </main>
 
     <footer class="border-top pt-3 bg-dark center fixed-bottom">
@@ -47,6 +59,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
